# appleauth

./: .bumpversion.cfg  .editorconfig  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  docs_modification.md  feature_request.md
changelog/: index.html
docs/: changelog.md  endpoints.md  index.md
endpoints/: index.html
search/: search_index.json
src/appleauth/: apis.py  mixins.py  serializers.py  services.py  settings.py
tests/: test_version.py
