# Poetry Ref: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "appleauth"
version = "0.0.1"
description = "Python library to implement Sign In with Apple in your Django backend."
authors = ["Primedigital Global <oss@primedigital.tech>"]
maintainers = [
    "Vikalp Jain <vikalp@primedigital.tech>",
    "Adarsh Pathak <adarsh@primedigital.tech>",
    "Vaibhav Sahu <vaibhav@primedigital.tech>",
]
license = "MIT"

readme = "README.md"
packages = [
    { include = "appleauth", from = "src" }
]

homepage = "https://primedigitalglobal.github.io/appleauth"
repository = "https://github.com/PrimedigitalGlobal/appleauth"
documentation = "https://primedigitalglobal.github.io/appleauth"

keywords = ["apple signin", "apple auth"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pre-commit = "^2.19.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocs-material-extensions = "^1.0.3"

# Ref: https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
